--- a/package.json
+++ b/package.json
@@ -69,10 +69,10 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-	"predeploy": "npm run build",
+    "start": "node scripts/start",
+    "build": "node scripts/build",
+    "test": "node scripts/test",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -93,7 +93,10 @@
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-mobx": "^2.0.0",
-    "gh-pages": "^2.1.0"
+    "eslint-config-standard": "^14.0.1",
+    "gh-pages": "^2.0.0",
+    "react-js-pagination": "^3.0.2",
+    "react-paginate": "^6.3.0"
   },
   "jest": {
     "collectCoverageFrom": [
