--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-mobx": "^2.0.0",
     "eslint-config-standard": "^14.0.1",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.0.0",
     "react-js-pagination": "^3.0.2",
     "react-paginate": "^6.3.0"
